# MDI_examples

./: .gitignore  README.md
MDI_examples/: CMakeLists.txt  aimd.cpp  aimd.py  md.cpp  md.py  md_qmmm_comm.py
dev/: knl_build.sh  mac_build.sh
tests/aimd/: clean.sh  mpi.sh  run.sh  tcp.sh
tests/aimd/mm/: water.in
tests/locations/: qe
tests/md/: mpi.sh  run.sh  tcp.sh
tests/md/mm/: water.in
tests/md_qmmm_comm/: clean.sh  run.sh
tests/md_qmmm_comm/mm/: water.in
tests/python_aimd/: run.sh
tests/python_aimd/qm/: water.in
